footer text gradient not supported on mobile issue solved

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -88,3 +88,17 @@
 .footer-nav-link {
   @apply relative inline-block px-1 pb-1 text-base text-theme-secondary  duration-300  after:absolute after:bottom-0 after:left-0 after:h-[1px] after:w-0 after:bg-theme-secondary after:duration-300 hover:after:w-full lg:text-lg dark:text-theme-dark-secondary dark:after:bg-theme-white;
 }
+
+.footer-txt-gradient {
+  background-image: linear-gradient(to left, #ec4899, #a855f7);
+  background-clip: text;
+  -webkit-background-clip: text; /* Safari and older versions of Chrome */
+  -moz-background-clip: text; /* Firefox (old versions) */
+  -ms-background-clip: text; /* Edge (old versions) */
+  -o-background-clip: text; /* Opera (old versions) */
+  color: transparent;
+  -webkit-text-fill-color: transparent; /* Safari and older versions of Chrome */
+  -moz-text-fill-color: transparent; /* Firefox (old versions) */
+  -ms-text-fill-color: transparent; /* Edge (old versions) */
+  -o-text-fill-color: transparent; /* Opera (old versions) */
+}
